@@ -11,6 +11,11 @@ module REXML
       self.encoding = encd
 
       @to_utf = encd != 'UTF-8'
+
+      if encoding == "UTF-16"
+        @output << "\ufeff".encode("UTF-16BE")
+        self.encoding = "UTF-16BE"
+      end
     end
 
     def <<( content )
