@@ -1,3 +1,9 @@
+Sat Nov  3 14:41:17 2012  Kouhei Sutou  <kou@cozmixng.org>
+
+	* lib/rexml/output.rb (REXML::Output): Don't output BOM in middle
+	  of the output string.
+	* test/rexml/test_document.rb: Add a test for the above change.
+
 Sat Nov  3 14:09:55 2012  Kouhei Sutou  <kou@cozmixng.org>
 
 	* NEWS: Add an item about REXML::Document#write.
